--- a/src/ensembl/package.json
+++ b/src/ensembl/package.json
@@ -129,6 +129,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.6.0",
     "prettier": "1.17.0",
+    "react-testing-library": "6.0.4",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "robotstxt-webpack-plugin": "5.0.0",
