--- a/src/ensembl/package.json
+++ b/src/ensembl/package.json
@@ -51,9 +51,9 @@
     "dotenv": "7.0.0",
     "foundation-sites": "6.5.3",
     "lodash": "4.17.11",
-    "react": "16.8.6",
+    "react": "16.9.0-alpha.0",
     "react-cookie": "3.1.2",
-    "react-dom": "16.8.6",
+    "react-dom": "16.9.0-alpha.0",
     "react-ga": "2.5.7",
     "react-redux": "7.0.2",
     "react-router": "5.0.0",
@@ -129,7 +129,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.6.0",
     "prettier": "1.17.0",
-    "react-testing-library": "6.0.4",
+    "react-testing-library": "6.1.2",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "robotstxt-webpack-plugin": "5.0.0",
