--- a/src/ensembl/Dockerfile.build
+++ b/src/ensembl/Dockerfile.build
@@ -11,6 +11,7 @@ WORKDIR /srv/ensembl-client/src/ensembl
 
 RUN npm ci &&\
 	  npm run test &&\
+    echo $(pwd) && echo $(ls) &&\
     npm run build &&\
     cp -r /srv/ensembl-client/src/ensembl/dist/ /output/ &&\
  	  git clone https://gitlab.ebi.ac.uk/kamal/ensembl-client-nginx.git /nginxconf/
