--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,8 @@ Test & Build:
     - src/ensembl/dist/
 
   only:
-  - cicd-test
+  - dev
+  - master
 
 Test & Build (temp):
   image: node:10.16.0
@@ -98,7 +99,8 @@ Nginx:
   - docker logout "$GITLAB_REGISTRY_URL"
 
   only:
-  - cicd-test
+  - dev
+  - master
 
 Nginx(temp):
   image: docker
@@ -178,7 +180,7 @@ Staging:
   - kubectl config use-context ens-stage-ctx
   - kubectl apply -f ensembl-client-caas-deploy/ensembl_client_deployment.yaml
   only:
-  - cicd-test
+  - dev
 
 Live:
   stage: deploy
